Update BuiltinPipePlugin.java